styling for dashboard

--- a/public/styles/css/app.css
+++ b/public/styles/css/app.css
@@ -3,5 +3,38 @@
   display: inline-block;
   width: 45px; }
 
+i.fa.right-spacing {
+  padding-right: 5px; }
+  i.fa.right-spacing.x2 {
+    padding-right: 10px; }
+i.fa.left-spacing {
+  padding-left: 5px; }
+  i.fa.left-spacing.x2 {
+    padding-left: 10px; }
+
 .content-wrap {
-  margin-top: 100px; }
+  margin-top: 75px;
+  width: 82%;
+  margin-left: 18%; }
+
+table a.btn {
+  text-decoration: none; }
+
+.ad-wrap .table-ads-main td:nth-child(1) {
+  width: 2%;
+  text-align: center;
+  line-height: 32px; }
+.ad-wrap .table-ads-main td:nth-child(2) {
+  width: 30%;
+  line-height: 32px; }
+.ad-wrap .table-ads-main td:nth-child(3) {
+  text-align: center;
+  width: 12%;
+  line-height: 32px; }
+.ad-wrap .table-ads-main td:nth-child(4) {
+  text-align: center;
+  width: 25%;
+  line-height: 32px; }
+.ad-wrap .table-ads-main td:nth-child(5) {
+  text-align: center;
+  width: 20%; }
